Modification de l'alignement des éléments dans l'en-tête et correction de la déclaration de la variable writingValue pour une gestion correcte de l'intensité du slider.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
   flex-direction: column;
   margin-bottom: 40px;
 }
